--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
 
 
 
-    <div class="up fixed top-1/2 z-50 left-[165px] cursor-pointer bg-white px-2 h-fit "><i class="fal font-bold fa-chevron-left text-3xl text-gray-500"></i></div>
+    <div class="up absolute top-1/2 z-50 left-0 cursor-pointer bg-white px-2 h-fit "><i class="fal font-bold fa-chevron-left text-3xl text-gray-500"></i></div>
 
-    <div class="down fixed top-1/2 z-50 right-[165px] cursor-pointer bg-white px-2 h-fit "><i class="fal font-bold fa-chevron-right text-3xl text-gray-500"></i></div>
+    <div class="down absolute top-1/2 z-50 right-0 cursor-pointer bg-white px-2 h-fit "><i class="fal font-bold fa-chevron-right text-3xl text-gray-500"></i></div>
 
 
     <div class="h-full  overflow-y-scroll scroll-smooth  w-full snap-y  snap-mandaotry flex gap-20 flex-col">
