--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
 <div class="second py-5 tranform translate-x-full h-[424px] overflow-hidden absolute left-0 top-0 tranform transition  px-3">
     <div class="text-base leading-5 font-bold mx-auto text-center mx-auto pb-5 bg-white">Choose QR Code</div>
 
-     <div class="verticalIndicators absolute left-0 mx-auto top-[45px] bg-white z-50 pb-3 w-full mb-3 flex items-center  transition gap-2 justify-center">
+     <div class="verticalIndicators absolute right-1 mx-auto top-[60%] bg-white z-[9999] py-2 px-3  w-fit  mb-3 flex items-center flex-col  transition gap-2 justify-center">
             <div class="h-2 rounded-full vDot1 transition  w-2 bg-[#a500a588]"></div>
-            <div class="h-2 rounded-full vDot2 border transition  border-gray-400 w-2 bg-white"></div>
+            <div class="h-2 rounded-full vDot2 border transition border-gray-400 w-2 bg-white"></div>
 
      </div>
 
