--- a/index.html
+++ b/index.html
@@ -159,11 +159,11 @@
 
      <div class="snap-start flex items-center justify-center pb-7    w-full">
          
-     <label htmlFor="advanceQR" class="flex  qr overflow-hidden  items-center relative justify-center">
+     <label  class="flex  qr overflow-hidden  items-center relative justify-center">
         <img src="advance.jpg" class="w-full " alt="QR Image">
-        <div class="absolute hidden  QRoverlay left-0 top-0 w-full h-full rounded flex items-center justify-center "><i class="far text-white fa-check text-4xl"></i></div>
+        <!-- <div class="absolute hidden  QRoverlay left-0 top-0 w-full h-full rounded flex items-center justify-center "><i class="far text-white fa-check text-4xl"></i></div>
         <input  value="true" class="hidden" type="radio" name="Radio Selected" id="advanceQR">
-       
+        -->
     </label>   
    
      </div>
