--- a/index.html
+++ b/index.html
@@ -149,11 +149,9 @@
 
 
         <div class="snap-start flex items-center justify-center  mb-36  w-full">
-        <label htmlFor="normalQR" class="flex qr overflow-hidden   items-center relative justify-center">
+        <label  class="flex qr overflow-hidden   items-center relative justify-center">
             <img src="normal.jpg" class="w-full" alt="QR Image">
-            <div class="absolute hidden  QRoverlay left-0 top-0 w-full h-full rounded flex items-center justify-center "><i class="far text-white fa-check text-4xl"></i></div>
-            <input  value="true" class="hidden" type="radio" name="Radio Selected" id="normalQR">
-           
+            
         </label>
      </div>
 
